# openwrt-AZB

./: Makefile  base-wifi.config  feeds.conf.default
5g_fm350/: install-wav600.sh  install.sh
5g_fm350/luci-app-wireless/: network.js  wireless.js
config/: Config-images.in
docs/: Application_Upgrade.md  CPU_OS_KERNEL.md  DNS测试.md  Dual_WAN.md  Ethernet.md  IPSEC multi-tunnel.doc  Logging测试.md  OpenVPN.md  OpenWRT_in_container.md  OpenWrt-2203.md  OpenWrt_Bond实验.md  OpenWrt登录方式.md  OpenWrt编译VPP-22.02.md  OpenWrt编译运行vpp-22.10步骤完整版本.md  PPPoE测试.md  QoS.md  README.en.md  README.md  SD-WAN Interface.md  SD-WAN sswan方式.doc  SD-WAN vppctl方式.doc  SD-WAN.md  SRv6实验.md  Statistics统计特性.md  VxLAN和Overlay拓扑测试.md  Wireless.md  filesystem.md  firewall测试.md  ipsec nat-t.doc  ligato环境安装测试过程.doc  nDPI.md  openssl_performance.md  openwrt-compile-test-dpdk.md  openwrt-dhcp-server-client-example.md  openwrt-frr-example.md  openwrt-gre-routing.md  openwrt-host-compile.md  openwrt-ipsec-example.md  openwrt-layer-2-forwarding-example.md  openwrt-layer-3-forwarding-example.md  (+14 more)
fm350/luci-app-lte5g/: Makefile
openwrt-config/: 20220401.config  20220405.config  20220408.config  20220424.config  20220502.config  20220619.config  20220626.config  20220707.config  20220811.config  20220902.config  20220920_wifi.config  20220926_wifi.config  20221020.config  20230320.config  20230505.config  20230523_sdwan.config  base.config  sdwan.config  strongswan_vpp.config  tmp.config
package/base-files/: Makefile
package/utils/vpp-vxlan-plugin/src/: CMakeLists.txt  CompileOptions.cmake  vpp_vxlan.c
package/utils/vpp-vxlan-plugin/src/cmake/Modules/: FindLibYANG.cmake  FindSYSREPO.cmake
scripts/: generate_recovery_update_support_img.sh
wav600/: create_git.sh  delete_git.sh
wav600/dwpal_6x-uci/: LICENSE  Makefile  README  dwpal.c  dwpal_cli.c  dwpal_ext.c  stats.c  strcmp.h  yocto_Makefile
wav600/iwlwav-dev-uci/: 0001-add-config-file.patch  0002-modify-the-kernel-version.patch  Kconfig.versions  Makefile.kernel  local-symbols  versions
wav600/swpal_6x-uci/src/: Makefile.am  uci_tools.c  uci_wrapper.c
wav600/swpal_6x-uci/src/include/: help_logging.h  uci_wrapper.h
(+896 files in other folders)
